@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Matt Faulkner">
     <title>GoobyDesk - Technician Dashboard</title>
+    <!-- Style/CSS goes in the HTML5 head -->
     <style>
         * {
             box-sizing: border-box;
@@ -73,6 +74,20 @@
             background-color: #1f356b;
         }
 
+        .close-ticket-btn {
+            display: block;
+            background-color: #284389;
+            color: white;
+            font-size: 16px;
+            font-weight: bold;
+            padding: 10px;
+            border-radius: 4px;
+            margin: 10px 0 20px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            width: 100%;
+        }
         .ticket-list {
             list-style-type: none;
             padding: 0;
@@ -94,6 +109,7 @@
         }
     </style>
 </head>
+<!-- Start of the displayed HTML -->
 <body>
     <div class="container">
         <div class="logo">
@@ -109,17 +125,18 @@
                 </li>
             {% endfor %}
         </ul>
+        <!-- Close Ticket button -->
         <div>
-            <input type="text" id="ticketIdInput" placeholder="Enter Ticket ID">
-            <button onclick="closeTicket()">Close Ticket</button>
+            <input type="text" id="ticketIdInput" placeholder="Ticket Number">
+            <button class="close-ticket-btn" button onclick="closeTicket()">Close Ticket</button>
         </div>
-        
+        <!-- The following is in Javascript. This is requires for the logged in Technician/User to close a ticket. -->
         <script>
         function closeTicket() {
             let ticketId = document.getElementById("ticketIdInput").value.trim();
         
             if (!ticketId) {
-                alert("Please enter a valid Ticket ID.");
+                alert("Ticket Number was NOT found. Try again.");
                 return;
             }
         
@@ -134,6 +151,7 @@
             .catch(error => console.error('Error:', error));
         }
         </script>
+        <!-- Technician logout button -->
         <a href="{{ url_for('logout') }}" class="logout-btn">Logout</a>
         <p class="footer-text">©2025 GoobyDesk, a BlueBotPC platform. All rights reserved.</p>
     </div>
